--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   },
   "homepage": "https://github.com/hatuanem199801/express-vercel#readme",
   "dependencies": {
-    "@serverless-stack/resources": "^1.2.3",
+    "@serverless-stack/resources": "^0.4.5",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "serverless-mysql": "^1.5.4"
+    "serverless-mysql": "^1.5.4",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
